--- a/zDrive.html
+++ b/zDrive.html
@@ -12,7 +12,7 @@
       window.open("https://drive.google.com/drive/u/"+num+"/my-drive", "_self");
     }
     function keyHandler(e) {
-      if(e.key=="0"||e.key=="1"||e.key=="2"||e.key=="3"||e.key=="4"){
+      if(e.key=="0"||e.key=="1"||e.key=="2"||e.key=="3"||e.key=="4"||e.key=="5"||e.key=="6"||e.key=="7"||e.key=="8"||e.key=="9"){
       openDrive(e.key);}
     }
     window.addEventListener("keydown", keyHandler);
